# transformer_from_scratch

./: .gitignore  check_emb.py  check_grad.py  check_tok.py  check_var.py  inference.py  main.py  main_parallel.py  masking.py  notebook.py  overfit_test.py  pyproject.toml  streaming.py  test.ipynb
models/: attention.py  model.py
