[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.6.1",
    "numpy>=2.4.2",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "wandb>=0.25.1",
]
